# sboom_ha

./: .gitignore  CHANGELOG.md  LEGAL.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-test.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: validate.yml
custom_components/sboom_ha/: __init__.py  _deeplink.py  _entity_base.py  _models.py  _parsers.py  _schedule.py  _tlv.py  api.py  binary_sensor.py  button.py  calendar.py  camera.py  cli4242.py  config_flow.py  const.py  coordinator.py  cover_client.py  cover_manager.py  device_action.py  device_tracker.py  device_trigger.py  diagnostics.py  helpers.py  iio_client.py  image_render.py  lyrics_client.py  lyrics_manager.py  manifest.json  media_player.py  number.py  quality_scale.yaml  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  system_health.py  websocket_api.py  (+1 more)
research/: 01_discover.py  02_probe.py  03_capture.py  04_fuzz_envelope.py  05_pair_discovery.py  06_action_fuzz.py  07_deep_fuzz.py  PROTOCOL.md  README.md  RESUME_BY_AI_PROTOCOL.md  STAROS_PROTOBUF.md  STATE_SCHEMA.md  _shared.py  _shared_bbpb.py  auto_discover.py  capture_state.py  fw_recon.py  lc_explore.py  op_side_effects.py  probe_oneshot.py  starmessage.proto  staros.proto  staros_enums.proto
research/experiments/: README.md  _config.example.py  _helpers.py  exp_01_multifield_envelope.py  exp_02_op_sweep_unauth.py  exp_03_pair_handshake.py  exp_04_op_sweep_authed.py  exp_05_get_state_inspect.py  exp_06_action_sweep.py  exp_07_dark_actions_probe.py  exp_08_subfield_fuzz_get_ops.py  (+13 more)
tests/: _fakes.py  _ha_stubs.py  conftest.py  test_api_commands.py  test_api_parsers.py  test_audit_fixes.py  test_availability.py  test_calendar.py  test_camera_timeline.py  test_config_flow.py  test_coordinator_events.py  test_coordinator_state.py  test_cover_client.py  test_device_automation.py  test_device_info.py  test_device_tracker.py  test_diagnostics.py  test_helpers.py  test_hw_clients.py  test_image_render.py  test_lyrics_client.py  test_lyrics_persistence.py  test_media_player.py  test_options.py  test_repairs.py  test_schedule.py  test_services.py  test_state_parser.py  test_system_health.py  test_tlv.py  test_websocket_api.py  test_zvuk_client.py  test_zvuk_drilldown.py
(+19 files in other folders)
